# egl_test

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  builder.Dockerfile  logging_config.ini  main.py  server.Dockerfile  setup.cfg  setup.py  simple_linear_regr.py
.github/workflows/: builder.yml  push.yml  service.yml  tests.yml
dev/: test.sh  watch_test.sh
linear_regressor/: api.py  linear_regressor.py  predict.py  server.py  utils.py
models/: simple_linear_regressor.joblib
scripts/: test_local_server.sh
tests/: test_dummy.py  test_utils.py
