[metadata]
name = linear_regressor
version = 0.0.1

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.9, <3.10

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 125
max-complexity = 10

[tool:pytest]
testpaths = tests

[coverage:run]
source = linear_regressor
omit = */__init__.py

[coverage:report]
omit = */__init__.py
fail_under = 100

[mypy]
python_version = 3.9
